k8s/base/api-chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-chat
  labels:
    app: api-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-chat
  template:
    metadata:
      labels:
        app: api-chat
    spec:
      containers:
        - name: api-chat
          image: leandrorodriguescarneiro/tcc_api_chat:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
